--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "nx-remotecache-minio",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "Remote caching for @nrwl/nx using Minio Storage",
   "main": "index.js",
   "typings": "index.d.ts",
   "scripts": {
     "build": "rm -rf dist && tsc && cp package.json dist/package.json && cp README.md dist/README.md && cp CHANGELOG.md dist/CHANGELOG.md",
-    "release": "npm run build && cd dist && npm publish && cd ..",
-    "local-release": "npm run build && cd dist && npm publish --registry=http://localhost:4873/ && cd ..",
-    "link": "npm run build && cd dist && npm link && cd .."
+    "release": "pnpm run build && cd dist && pnpm publish && cd ..",
+    "local-release": "pnpm run build && cd dist && pnpm publish --registry=http://localhost:4873/ && cd ..",
+    "link": "pnpm run build && cd dist && pnpm link && cd .."
   },
   "repository": {
     "type": "git",
@@ -32,12 +32,15 @@
   },
   "homepage": "https://github.com/NiklasPor/nx-remotecache-minio#readme",
   "devDependencies": {
-    "@nrwl/workspace": "^15.2.0",
+    "@nx/workspace": "^16.0.0",
     "@types/minio": "^7.0.14",
     "typescript": "^4.1.3"
   },
   "dependencies": {
     "minio": "^7.0.32",
-    "nx-remotecache-custom": "^3.0.0"
+    "nx-remotecache-custom": "^4.0.0"
+  },
+  "peerDependencies": {
+    "@nx/workspace": ">=16.0.0"
   }
 }
