--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nx-remotecache-minio",
-  "version": "4.1.0",
+  "version": "4.2.0",
   "description": "Remote caching for @nrwl/nx using Minio Storage",
   "main": "index.js",
   "typings": "index.d.ts",
@@ -32,13 +32,14 @@
   },
   "homepage": "https://github.com/NiklasPor/nx-remotecache-minio#readme",
   "devDependencies": {
-    "@nx/workspace": "^16.0.0",
-    "@types/minio": "^7.0.14",
-    "typescript": "^4.1.3"
+    "@nx/workspace": "^16.6.0",
+    "@types/yargs": "^17.0.24",
+    "@types/node": "^20.4.6",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
-    "minio": "^7.0.32",
-    "nx-remotecache-custom": "^4.1.0"
+    "minio": "^7.1.1",
+    "nx-remotecache-custom": "^4.2.1"
   },
   "peerDependencies": {
     "@nx/workspace": ">=16.0.0"
