--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
     "outDir": "dist",
-    "declaration": false,
-    "types": ["node"]
+    "declaration": false
   },
   "include": ["lib/**.ts"]
 }
