--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
     "outDir": "dist",
-    "declaration": false
+    "declaration": false,
+    "skipLibCheck": true
   },
   "include": ["lib/**.ts"]
 }
